# leveldb_learning

./: .gitignore  CMakeLists.txt  README.md
benchmark记录/db_bench/: 默认配置.txt
leveldb/: CMakeLists.txt
mytest/: CMakeLists.txt  test.cpp
mytest/testdb/: 000005.ldb  000008.ldb  000011.ldb  LOG  LOG.old  MANIFEST-000010
notes/: leveldb源码阅读00-整体架构.md  leveldb源码阅读记录01-核心数据结构.md
